--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,26 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "multi-agent-research-automation"
+name = "r3"
 version = "0.1.0"
-description = "Add your description here"
+description = "Add description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "ipykernel>=7.2.0",
-    "langgraph>=1.0.8",
+    "ipykernel>=6.30.1",
+    "langchain-community>=0.3.30",
+    "langchain-core>=0.3.78",
+    "langchain-google-genai==2.1.8",
+    "langchain-groq==0.3.6",
+    "langchain-openai==0.3.32",
+    "langgraph>=0.6.8",
+    "structlog==25.4.0",
+    "tavily-python>=0.7.12",
+    "wikipedia>=1.4.0",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["src*"]
