--- a/src/config/configuration.yaml
+++ b/src/config/configuration.yaml
@@ -11,7 +11,7 @@ retriever:
 llm:
   groq:
     provider: "groq"
-    model_name: "deepseek-r1-distill-llama-70b"
+    model_name: "openai/gpt-oss-20b"
     temperature: 0
     max_output_tokens: 2048
 
@@ -21,7 +21,7 @@ llm:
     temperature: 0
     max_output_tokens: 2048
 
-  openai:
-     provider: "openai"
-     model_name: "gpt-4o"
-     temperature: 0
+  # openai:
+  #    provider: "openai"
+  #    model_name: "gpt-4o"
+  #    temperature: 0
